lox-tests/tests/if/var_in_else.stderr
ERROR: at 'var': Expected expression, got Var
 --> 2:22
  |
2 | if (true) "ok"; else var foo;
  |                      ^-^
